--- a/front-end-user/src/app/admin/admin-footer/admin-footer.component.html
+++ b/front-end-user/src/app/admin/admin-footer/admin-footer.component.html
@@ -4,12 +4,12 @@
     <div class="flex flex-wrap items-center md:justify-end justify-center">
       <div class="w-full md:w-4/12 px-4">
         <div class="text-sm text-gray-600 font-semibold py-1">
-          Copyright © {{date}}
+          Copyright © {{ date }}
           <a
             href="https://www.creative-tim.com"
             class="text-gray-600 hover:text-gray-800 text-sm font-semibold py-1"
           >
-            ISC-QT Quiz
+            UTC-CNTT-Quiz
           </a>
         </div>
       </div>
