--- a/front-end-user/src/app/home/home.component.html
+++ b/front-end-user/src/app/home/home.component.html
@@ -52,7 +52,7 @@
           >
             Chào mừng đến với trang web
             <br class="hidden sm:inline" />
-            <span class="text-teal-400">kiểm tra trắc nghiệm online.</span>
+            <span class="text-teal-400">kiểm tra trắc nghiệm trực tuyến.</span>
           </h1>
           <!--          <p-->
           <!--            class="mt-2 text-lg leading-7 text-gray-300 sm:mt-3 sm:text-xl sm:max-w-xl xl:mt-4 xl:text-2xl xl:max-w-2xl">-->
@@ -426,26 +426,21 @@
   <!-- Footer -->
   <div class="flex text-gray-200 w-full justify-between items-end px-8 py-4">
     <div class="w-1/3">
-      <div class="uppercase my-3">LIÊN HỆ</div>
+      <!-- <div class="uppercase my-3">LIÊN HỆ</div>
       <ul>
         <li class="my-2">
           Tòa nhà SaigonTech, Lô 14, Đường số 5, Công viên Phần mềm Quang Trung,
           Q. 12, Tp. HCM, Việt Nam
         </li>
-        <li class="my-2">Phone: 0903 76 71 88</li>
+        <li class="my-2">Phone: 0963 012 401</li>
         <li class="my-2">Website: www.iscquangtrung.edu.vn</li>
         <li class="my-2">Email: iscquangtrung@saigontech.edu.vn</li>
-      </ul>
+      </ul> -->
     </div>
     <div class="text-center py-3">
       {{ now }} - Made with
       <span class="text-pink-700"><i class="fa fa-heart"></i></span> by
-      <a
-        class="text-blue-700"
-        href="https://github.com/tamht298"
-        target="_blank"
-        >Huynh Thanh Tam</a
-      >
+      <a class="text-blue-700">Nguyen Dinh Viet Anh</a>
     </div>
   </div>
 </div>
